feat: Add footer with copyright notice and update README with project structure and setup instructions

--- a/index.html
+++ b/index.html
@@ -103,7 +103,9 @@
             </template>
         </div>
     </div>
-        <!-- ... -->
     </div>
 </body>
+<footer>
+    <p>&copy; 2024 MovieFinder. All rights reserved.</p>
+</footer>
 </html>
